--- a/package.json
+++ b/package.json
@@ -8,22 +8,22 @@
     "@tensorflow-models/face-detection": "^1.0.3",
     "@tensorflow-models/face-landmarks-detection": "^1.0.6",
     "@tensorflow/tfjs": "^4.22.0",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@tsparticles/engine": "^3.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@testing-library/user-event": "^14.5.2",
+    "@tsparticles/engine": "^3.7.1",
     "@tsparticles/interaction-light": "^3.7.1",
     "@tsparticles/react": "^3.0.0",
     "face-api.js": "^0.22.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-tilt": "^1.0.2",
     "react-tsparticles": "^2.12.2",
     "tachyons": "^4.12.0",
     "tsparticles": "^3.7.1",
     "tsparticles-interaction-light": "^2.12.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
